Actualizacion de contenido. Primer set de gráficas introducido. Falta explicación de estas

--- a/Abstract/abstract.tex
+++ b/Abstract/abstract.tex
@@ -7,10 +7,11 @@
 
 \begin{abstracts}
 
-The abstract goes here. The abstract should be self-contained and:
+This thesis aims to:
 \begin{itemize}
-    \item clearly state the problem dealt with by the thesis; \item give a synthetic description of the proposed solution;
-    \item  highlight the sense in which the proposed solution enhances the state of the art.
+    \item Mesure performance LoRaWan comunication standard on packed cities and with moving end nodes
+    \item Many different scenarios were tested and analized
+    \item The conclusions reached prove that the asumptions made were sound
 \end{itemize}
 
 \end{abstracts}
