--- a/Introduction/introduction.tex
+++ b/Introduction/introduction.tex
@@ -42,7 +42,7 @@ distribution of the buildings is important in the reach of the
 signal. One example of this is the problems with GPS localization 
 when near skyscrapers.
 
-\section{Objectives and Contributions}
+\section{Tools used in the thesis}
 \label{objectives}
 For the storage and analysis of these messages The Things Network is
 being used, which is a free to use LoRa network that offers not only
