--- a/Thesisfindecarrera.tex
+++ b/Thesisfindecarrera.tex
@@ -24,6 +24,7 @@
 \usepackage{varioref}
 % \usepackage{cleveref}
 \usepackage{tabularx}
+\usepackage{caption}
 \usepackage{float}
 \usepackage{longtable}
 \usepackage[pdftex]{graphicx}
@@ -129,6 +130,7 @@
 \include{Chapter2/chapter2}
 \include{Chapter3/chapter3}
 \include{Chapter4/chapter4}
+\include{Chapter5/chapter5}
 \include{Conclusions/conclusions}
 
 \appendix
