--- a/glossary.tex
+++ b/glossary.tex
@@ -1,23 +1,22 @@
 
  
-\newacronym{rnn}{RNN}{Recurrent Neural Network}
+\newacronym{ttn}{TTN}{The things Network}
  
-\newacronym{gmm}{GMM}{Gaussian Mixture Model}
+\newacronym{adr}{ADR}{Adaptative data rate}
 
-\newacronym{hri}{HRI}{Human Robot Interaction}
+\newacronym{sf}{SF}{Spreading Factor}
 
-\newacronym{uav}{UAV}{Unmanned Aerial Vehicle}
+\newacronym{toa}{ToA}{Time on air}
 
-\newacronym{imu}{IMU}{Inertial Measurement Unit}
+\newacronym{rssi}{RSSI}{Received signal stenght indicator}
 
-\newacronym{mem}{MEM}{Micro-Electro-Mechanics}
+\newacronym{snr}{SNR}{Signal to noise ratio}
 
-\newacronym{pca}{PCA}{Principal Component Analysis}
+\newacronym{ed}{ED}{End devide}
 
-\newacronym{dtw}{DTW}{Dynamic Time Warping}
+\newacronym{tx power}{Tx power}{Transmission power used}
 
 \newacronym{lstm}{LSTM}{Long short-term memory}
-
 
 \newacronym{narx}{NARX}{Nonlinear AutoRegressive network with eXogenous inputs}
 
