--- a/Appendix1/appendix1.tex
+++ b/Appendix1/appendix1.tex
@@ -3,14 +3,24 @@
 %        1         2         3         4         5         6         7         8
 % THESIS APPENDIX
 
-\chapter{Gesture Vocabulary} 
+\chapter{LMIC Modifications} 
 \label{chap:appendixA}
 
 
-\begin{figure}
-    \centering
-    \includegraphics[width=0.8\textwidth]{Chapter4/Figures/Figures/gv.PNG}
-    \caption{Proposed gesture vocabulary}
-    \label{fig:gs}
-\end{figure}
 
+In order to make LMIC change some parameters, we modified a little of the source code.\\
+On lmic/lmic.h:
+\begin{minted}{C}
+extern int ENERGIA
+    
+\end{minted}
+
+On lmic/radio.c :
+\begin{minted}{C}
+static void configPower () {
+    // our input paramter -- might be different than LMIC.txpow!
+    
+    s1_t const req_pw = (s1_t)ENERGIA;
+    ...
+}
+\end{minted}
