--- a/Thesisfindecarrera.tex
+++ b/Thesisfindecarrera.tex
@@ -35,6 +35,7 @@
 \usepackage{setspace}
 \setstretch{1.5}
 %\onehalfspacing
+\usepackage{minted}
 % SPECIAL COMMANDS
 % correct bad hyphenation
 \hyphenation{op-tical net-works semi-conduc-tor}
@@ -56,8 +57,8 @@
               /Author (Pablo Salinas, Javier Pardiño, Iñigo García)
               /CreationDate (D:20220628000000) %format D:YYYYMMDDhhmmss
               /ModDate (D:2022062800000)
-              /Subject (On the LoRaWan technologies on cities)
-              /Keywords (Bachelor, Thesis, RoboticsLaTeX)}
+              /Subject (On the LoRaWan technologies: a case study of Genova)
+              /Keywords (Bachelor, Thesis)}
     \pdfcatalog {/PageMode (/UseOutlines)
                  /OpenAction (fitbh) }
 \fi
@@ -132,7 +133,7 @@
 \include{Chapter4/chapter4}
 \include{Chapter5/chapter5}
 \include{Conclusions/conclusions}
-
+\include{Appendix1/appendix1.tex}
 \appendix
 %\include{Appendix1/appendix1}
 %\include{Appendix2/appendix2}
