Changed some titles and included the packet structure

--- a/Conclusions/conclusions.tex
+++ b/Conclusions/conclusions.tex
@@ -80,18 +80,19 @@ on an open area it maintains stable levels for much longer distances.
 Another conclusion can be extracted from this data. If we look at the percentage of packets received when dividing by spreading factor and power
 transmitted, on open areas the results closely correlate with theory. On the other hand, the data in the urban dense area highlights that 
 these parameters do not have noticeable impact due to the fact that the landscape plays a much more important role.
-
-\begin{figure}[!h]
+\\
+\begin{figure}[htpb]
 \centering    
 \includegraphics[width=\linewidth]{recivedByPower.png}
 \caption{Losses grouped by power}
 \label{conc:recivedPow}
-
+\end{figure}
+\begin{figure}{htpb}
 \includegraphics[width=\linewidth]{recivedBySpreading.png}
 \caption{Losses gropued by spreading factor}
 \label{conc:recivedSp}
 \end{figure}
-\begin{figure}
+\begin{figure}[htpb]
 \includegraphics[width=\linewidth]{rssiSpreading.png}
 \caption{Mean RSSI grouped by spreading factor}
 \label{conc:rssiSp}
