--- a/Thesisfindecarrera.tex
+++ b/Thesisfindecarrera.tex
@@ -63,7 +63,7 @@
                  /OpenAction (fitbh) }
 \fi
 
-\title{\Large{LoRaWan on Genova}}
+\title{\Large{Empirical study of LoRaWan on the study case of Genova}}
 
 \ifpdf
   \author{Pablo Salinas, Javier Pardiño, Iñigo García
