Took out htpb of a graph

--- a/Conclusions/conclusions.tex
+++ b/Conclusions/conclusions.tex
@@ -87,7 +87,7 @@ these parameters do not have noticeable impact due to the fact that the landscap
 \caption{Losses grouped by power}
 \label{conc:recivedPow}
 \end{figure}
-\begin{figure}{htpb}
+\begin{figure}[htpb]
 \includegraphics[width=\linewidth]{recivedBySpreading.png}
 \caption{Losses gropued by spreading factor}
 \label{conc:recivedSp}
