--- a/References/references.bib
+++ b/References/references.bib
@@ -67,5 +67,15 @@
   title = {LoRa alliance web site},
   howpublished = {\url{https://lora.readthedocs.io/en/latest/}}
 }
+@article{elola2018life+,
+  title={LIFE+ RESPIRA: reducci{\'o}n de la exposici{\'o}n de ciclistas a contaminantes urbanos},
+  author={Elola, Carolina Santamar{\'\i}a and Ulecia, Jes{\'u}s Miguel Santamar{\'\i}a},
+  journal={Bolet{\'\i}n del Grupo Espa{\~n}ol del Carb{\'o}n},
+  number={48},
+  pages={40--44},
+  year={2018},
+  publisher={Grupo Espa{\~n}ol del Carb{\'o}n}
+}
+
 
 % ------------------------------------------------------------------------
