--- a/Thesisfindecarrera.tex
+++ b/Thesisfindecarrera.tex
@@ -36,6 +36,7 @@
 \setstretch{1.5}
 %\onehalfspacing
 \usepackage{minted}
+\usepackage[utf8]{inputenc}
 % SPECIAL COMMANDS
 % correct bad hyphenation
 \hyphenation{op-tical net-works semi-conduc-tor}
@@ -92,6 +93,7 @@
     }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \makeglossaries
+
 \loadglsentries{glossary}
 
 \begin{document}
@@ -121,7 +123,7 @@
 \tableofcontents
 \listoffigures
 \listoftables
-\printglossary[title=List of Acronyms,type=\acronymtype]
+\printglossary
 %\printglossary  % Print the nomenclature (WAY TOO COMPLEX FOR ME NOW!)
 %\addcontentsline{toc}{chapter}{Nomenclature}
 
